cmake_minimum_required(VERSION 4.1)
project(ll5refucktoring)

set(CMAKE_CXX_STANDARD 14)

add_executable(ll5refucktoring
        .idea/.gitignore
        .idea/editor.xml
        .idea/ll5refucktoring.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .gitignore
        main.cpp)
